syntax = "proto3";

option csharp_namespace = "CKANServer";

import "google/protobuf/timestamp.proto";

package ckan;

service CKANServer {
    // Performs a single action on the server.
    // If the server needs more information to complete the action, the client
    // must follow up with additional `ContinueRequest` messages.
    rpc ProcessAction (stream ActionMessage) returns (stream ActionReply);
    // Get the version of CKAN
    rpc GetVersion (GetVersionRequest) returns (GetVersionReply);
}

message GetVersionRequest {}

message GetVersionReply {
    // The version of CKAN in SemVer format
    string version = 1;
    // The product name of the software (e.g. "CKAN")
    string product_name = 2;
}

message ActionMessage {
    reserved 10;
    
    oneof request {
        ContinueRequest continue_request = 1;

        InstancesListRequest instances_list_request = 2;
        InstanceAddRequest instance_add_request = 3;
        InstanceCloneRequest instance_clone_request = 4;
        InstanceRenameRequest instance_rename_request = 5;
        InstanceForgetRequest instance_forget_request = 6;
        InstanceFakeRequest instance_fake_request = 7;
        InstanceSetDefaultRequest instance_set_default_request = 8;

        RegistryPrepopulateRequest registry_prepopulate_request = 9;
        RegistryAvailableModulesRequest registry_available_modules_request = 11;
    }
}

message ContinueRequest {
    oneof value {
        // Response to a yes/no prompt
        bool yes_or_no = 1;
        // Response to a selection prompt
        uint32 index = 2;
    }
}

message ActionReply {
    message Prompt {
        // The prompt to display to the user
        string message = 1;
        // The default option to select, if any
        optional uint32 default_index = 2;
        // A list of options for the user to select.
        // If empty, the user must answer yes or no to the prompt.
        repeated string options = 3;
    }

    message Progress {
        // The message associated with the progress
        optional string message = 1;
        // The percentage of completion, from 0 to 100
        uint32 value = 3;
    }

    oneof status {
        // A message to display to the user
        string message = 1;
        // An error message to display to the user
        string errorMessage = 2;
        // An update on the progress of the transaction
        Progress progress = 3;
        // A prompt for the user to respond to
        Prompt prompt = 4;

        // The request failed.
        FailureMessage failure = 5;
        // The reply to a list request
        InstancesListReply instances_list_reply = 6;
        InstanceOperationReply instance_operation_reply = 7;
        RegistryOperationReply registry_operation_reply = 8;
    }
}

message FailureMessage {
    string message = 1;
}

message Game {
    string id = 1;

    message Version {
        optional int32 major = 1;
        optional int32 minor = 2;
        optional int32 patch = 3;
        optional int32 build = 4;
    }
}

// # Instances

message Instance {
    message VersionCompatibility {
        optional Game.Version game_version_when_last_updated = 1;
        repeated Game.Version compatible_versions = 2;
    }
    
    string directory = 1;
    string gameId = 2;
    // Guaranteed to be unique
    string name = 3;
    Game.Version game_version = 4;
    bool is_default = 5;
    
    // # Compatibility
    
    // The minimum allowed stability of mods for them to be considered "compatible".
    Module.ReleaseStatus stability_tolerance = 6;
    // Overrides for individual mod identifiers.
    map<string, Module.ReleaseStatus> stability_tolerance_overrides = 7;
    // Controls which mods are compatible based on their targeted game versions.
    VersionCompatibility version_compatibility = 8;
}

enum InstanceOperationResult {
    IOR_SUCCESS = 0;
    // Some required data wasn't specified.
    IOR_MISSING_DATA = 1;
    // This instance name is already taken.
    IOR_DUPLICATE_INSTANCE = 2;
    // The directory specified is not a game instance.
    IOR_NOT_AN_INSTANCE = 3;
    // There is no instance with this name.
    IOR_INSTANCE_NOT_FOUND = 4;
    // Generic clone failure
    IOR_CLONE_FAILED = 5;
    // The install location must not already exist.
    IOR_NEW_INSTANCE_DIR_EXISTS = 6;
    // The game requested to be faked is not supported.
    IOR_FAKER_UNKNOWN_GAME = 7;
    // The version requested to be faked is not supported.
    IOR_FAKER_UNKNOWN_VERSION = 8;
    // The version requested to be faked is too old to support one of the requested DLCs.
    IOR_FAKER_VERSION_TOO_OLD = 9;
    // Generic game fake failure
    IOR_FAKER_FAILED = 10;
}

message InstanceOperationReply {
    InstanceOperationResult result = 1;
    optional string error_details = 2;
}

message InstancesListRequest {}
message InstancesListReply {
    repeated Instance instances = 1;
}

message InstanceAddRequest {
    string name = 1;
    string directory = 2;
}

message InstanceCloneRequest {
    string name = 1;
    string newName = 3;
    string newDirectory = 4;
    bool create_symlinks_for_stock_dirs = 5;
}

message InstanceRenameRequest {
    string oldName = 1;
    string newName = 2;
}

message InstanceForgetRequest {
    string name = 1;
}

message InstanceSetDefaultRequest {
    string name = 1;
}

message InstanceFakeRequest {
    string name = 1;
    string directory = 2;
    Game.Version version = 3;
    string gameId = 4;
    optional Game.Version making_history_version = 5;
    optional Game.Version breaking_ground_version = 6;
    bool use_as_new_default = 7;
}

// # Registry

message Module {
    enum Kind {
        MODULE_UNKNOWN = 0;
        MODULE_PACKAGE = 1;
        MODULE_METAPACKAGE = 2;
        MODULE_DLC = 3;
    }

    message Relationship {
        message DirectRelationship {
            // The identifier to match
            string name = 1;
            optional string max_version = 2;
            optional string min_version = 3;
            optional string version = 4;
        }
        message AnyOfRelationship {
            repeated Relationship allowed_modules = 1;
        }

        optional string choice_help_text = 1;
        // If true, then don't show recommendations and suggestions of this module or its dependencies.
        // Otherwise recommendations and suggestions of everything in changeset will be included.
        // This is meant to allow the KSP-RO team to shorten the prompts that appear during their installation.
        bool suppress_recommendations = 2;
        oneof type {
            DirectRelationship direct = 3;
            AnyOfRelationship any_of = 4;
        }
    }

    enum ReleaseStatus {
        MRS_UNKNOWN = 0;
        MRS_STABLE = 1;
        MRS_TESTING = 2;
        MRS_DEVELOPMENT = 3;
    }

    message Resources {
        optional string homepage = 1;
        optional string spacedock = 2;
        optional string curse = 3;
        optional string repository = 4;
        optional string bugtracker = 5;
        optional string discussions = 6;
        optional string ci = 7;
        optional string license = 8;
        optional string manual = 9;
        optional string metanetkan = 10;
        optional string remote_avc = 11;
        optional string remote_swinfo = 12;
        optional string store = 13;
        optional string steam_store = 14;
    }
    
    message Release {
        string name = 2;
        string version = 3;
        ReleaseStatus release_status = 4;
        string abstract = 5;
        optional string description = 6;
        optional Kind kind = 7;
        repeated string authors = 8;
        repeated string licenses = 9;
        repeated string tags = 10;
        repeated string localizations = 11;
        google.protobuf.Timestamp release_date = 12;
        Resources resources = 13;
        
        repeated Relationship conflicts = 14;
        repeated Relationship depends = 15;
        repeated Relationship recommends = 16;
        repeated Relationship suggests = 17;
        repeated Relationship supports = 18;
        optional Relationship replaced_by = 19;
        repeated string provides = 20;
        
        repeated string download_uris = 21;
        uint64 download_size_bytes = 22;
        uint64 install_size_bytes = 23;
        uint64 download_count = 24;
        
        optional Game.Version ksp_version = 25;
        optional Game.Version ksp_version_max = 26;
        optional Game.Version ksp_version_min = 27;
        bool ksp_version_strict = 28;
    }
    
    string identifier = 1;
    repeated Release releases = 2;
}

enum RegistryOperationResult {
    ROR_SUCCESS = 0;
    ROR_REGISTRY_IN_USE = 1;
}

message RegistryOperationReply {
    reserved 3;
    
    RegistryOperationResult result = 1;
    optional string error_details = 2;
    oneof results {
        RegistryAvailableModulesReply available_modules = 4;
    }
}

message RegistryPrepopulateRequest {
    string instance_name = 1;
    bool force_lock = 2;
}

message RegistryAvailableModulesRequest {
    string instance_name = 1;
}

message RegistryAvailableModulesReply {
    repeated Module modules = 1;
}
